--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -24,6 +24,10 @@
       function mypayment() {
         const imp_code= process.env.imp;
         const myAmount = Number(document.getElementById("amount").value);
+        const myName = document.getElementById("name").value;
+        const myEmail = document.getElementById("email").value;
+        const myCommodity = document.getElementById("commodity").value;
+        const myAdress = document.getElementById("address").value;
 
         const IMP = window.IMP; // 생략 가능
         IMP.init(imp_code); // Example: imp00000000
@@ -34,24 +38,26 @@
             pay_method: "card",
             name: "마우스",
             amount: myAmount,
-            buyer_email: "gildong@gmail.com",
-            buyer_name: "홍길동",
-            buyer_tel: "010-4242-4242",
-            buyer_addr: "서울특별시 강남구 신사동",
-            buyer_postcode: "01181",
+            buyer_email: myEmail,
+            buyer_name: myName,
+            buyer_tel: "010-3333-3333",
+            buyer_addr: myAdress,
+            buyer_postcode: "33333",
             m_redirect_url: "http://localhost:3000", // 모바일 결제후 리다이렉트될 주소!!
           },
           function (rsp) {
       			//rsp.imp_uid 값으로 결제 단건조회 API를 호출하여 결제결과를 판단합니다.
             if (rsp.success) {
               $.ajax({
-                url: "/payment/validate/" + rsp.imp_uid,
+                url: "/payment/validate",
                 method: "POST",
                 contentType: "application/json",
                 data: JSON.stringify({
                   imp_uid: rsp.imp_uid,            // 결제 고유번호
                   merchant_uid: rsp.merchant_uid,   // 주문번호
-                  amount: rsp.paid_amount
+                  amount: rsp.paid_amount,
+                  buyer: myEmail,
+                  address: myAdress
                 }),
             }).done(function (data) {
               // 가맹점 서버 결제 API 성공시 로직
@@ -65,6 +71,10 @@
     </script>
   </head>
   <body>
+    구매자 이름: <input type="text" id="name" />
+    구매자 이메일: <input type="text" id="email" />
+    구매자 주소: <input type="text" id="address" />
+    결제할 상품:  <input type="text" id="commodity" />
     결제할 금액: <input type="text" id="amount" />
     <button onclick="mypayment()">결제하기</button>
   </body>
