--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -24,10 +24,10 @@
       function mypayment() {
         //const imp_code= process.env.imp;
         const myAmount = Number(document.getElementById("amount").value);
-        const myName = "홍길동";
-        const myEmail = "gildong@gmail.com";
-        const myCommodity = "마우스";
-        const myAdress = "서울특별시 강남구 신사동";
+        const myName = String(document.getElementById("name").value);
+        const myEmail = String(document.getElementById("email").value);
+        const myCommodity = String(document.getElementById("commodity").value);
+        const myAdress = String(document.getElementById("address").value);
 
         const IMP = window.IMP; // 생략 가능
         IMP.init("imp45506818"); // Example: imp00000000
@@ -57,7 +57,8 @@
                   merchant_uid: rsp.merchant_uid,   // 주문번호
                   amount: rsp.paid_amount,
                   buyer: myEmail,
-                  address: myAdress
+                  address: myAdress,
+                  commodity: myCommodity
                 }),
             }).done(function (data) {
               // 가맹점 서버 결제 API 성공시 로직
@@ -71,10 +72,10 @@
     </script>
   </head>
   <body>
-    <!--구매자 이름: <input type="text" id="name" />
+    구매자 이름: <input type="text" id="name" />
     구매자 이메일: <input type="text" id="email" />
     구매자 주소: <input type="text" id="address" />
-    결제할 상품:  <input type="text" id="commodity" />-->
+    결제할 상품:  <input type="text" id="commodity" />
     결제할 금액: <input type="text" id="amount" />
     <button onclick="mypayment()">결제하기</button>
   </body>
